---------------------------------------------------------------------------------------------------
Version: 1.1.4
  Features:
    - Added Laser Fence Gates: a new technology to unlock a second type of emitter that forms gates instead of fences
    - Added the ability to place Laser Fence Post in the middle of existing Laser Fences
  Bugfixes:
    - Fixed laser fence segments getting mistaken for rocks by biters and other mods
    - Fixed some crashes that occurred when laser fences were destroyed
---------------------------------------------------------------------------------------------------
Version: 1.1.3
  Bugfixes:
    - Fixed crash that occurred when revived laser fence posts were destroyed again (LuaEntity API call when LuaEntity was invalid. laserfence/scripts/CnC_Walls.lua:285)
    - Fixed laser fence posts not showing correctly in blueprints/deconstruction plans
    - Fixed laser fence posts not working after being revived by robots
    - Fixed AOE damage sometimes causing laser fence posts to stop working and construction robots to get stuck trying to fix them
---------------------------------------------------------------------------------------------------
Version: 1.1.2
  Features:
    - Added a ton of settings to let you balance Laser Fences however you want
    - Added new upgrade for increasing the maximum Laser Fence length
  Bugfixes:
    - Fixed crash that occurred when a fence and a post died on the same tick
    - Fixed small enemies being able to walk through laser fences
    - Fixed laser fence selection box not being aligned with the grid
---------------------------------------------------------------------------------------------------
Version: 1.1.1
  Features:
    - Added floating text to notify when something is blocking a fence from connecting
  Bugfixes:
    - Fixed fences occasionally stopping one tile short of connecting to the next emitter
    - Fixed large obstructions not allowing fences to form after they have been removed