@@ -2,7 +2,7 @@
 laserfence=Laser Fence
 
 [mod-description]
-laserfence=Use Laser Fence technology developed during the Tiberium Wars to fend off biters.
+laserfence=Fend off biters using Laser Fence technology that was developed during the Tiberium Wars.
 
 [entity-name]
 laserfence-post=Laser Fence Emitter
@@ -11,9 +11,9 @@ laserfence-post-gate=Laser Fence Gate Emitter
 laserfence-beam-gate=Laser Fence Gate Section
 
 [entity-description]
-laserfence-post=A Laser Fence generator that can maintain a 'fence' of max length __1__ between two emitters. Each emitter needs to fully charge before it will create a fence to aligned emitters and needs a constant 0.5MW of power to maintain the fences. When one fence segment is destroyed the entire fence dissipates and the emitters must recharge for the fence to reform. 
+laserfence-post=A Laser Fence generator that can maintain a 'fence' of max length __1__ between two emitters. Each emitter needs to fully charge before it will create a fence to aligned emitters and needs a constant power input of __2__kW plus __3__kW per segment to maintain the fences. When one fence segment is destroyed the entire fence dissipates and the emitters must recharge for the fence to re-form. 
 laserfence-beam=A section of the fence that zaps attackers. When one fence segment is destroyed the entire fence dissipates and the emitters must recharge for the fence to reform. 
-laserfence-post-gate=An alternate Laser Fence generator that can maintain a retractable 'gate' of max length __1__ between two gate emitters. Will form and ordinary 'fence' in directions connected to Laser Fence Emitters. Each emitter needs to fully charge before it will create a fence to aligned emitters and needs a constant 0.5MW of power to maintain the fences. When one fence segment is destroyed the entire fence dissipates and the emitters must recharge for the fence to reform. 
+laserfence-post-gate=An alternate Laser Fence generator that can maintain a retractable 'gate' of max length __1__ between two gate emitters. Will form and ordinary 'fence' in directions connected to Laser Fence Emitters. Each emitter needs to fully charge before it will create a fence to aligned emitters and needs a constant power input of __2__kW plus __3__kW per segment to maintain the fences. When one fence segment is destroyed the entire fence dissipates and the emitters must recharge for the fence to re-form. 
 laserfence-beam-gate=A section of the fence that zaps attackers. When the player approaches the gate, it will deactivate to let them through. When one fence segment is destroyed the entire fence dissipates and the emitters must recharge for the fence to reform. 
 laserfence-obstruction-text=Laser Fence blocked by __1__
 
@@ -21,11 +21,13 @@ laserfence-obstruction-text=Laser Fence blocked by __1__
 laserfence=Laser Fence
 laserfence-gate=Laser Fence Gate
 laserfence-range=Laser Fence Connection Range
+laserfence-efficiency=Laser Fence Energy Efficiency
 
 [technology-description]
 laserfence=Laser Fences to keep the biters out
 laserfence-gate=Laser Fence Gates to let you through
 laserfence-range-effect=Increases the range at which Laser Fences can connect by __1__
+laserfence-efficiency-effect=Reduces the base power consumption of Laser Fence posts by __1__
 
 [mod-setting-name]
 laserfence-debug-text=Debug Text
@@ -35,7 +37,8 @@ laserfence-added-range=Length Upgrade
 laserfence-health=Health
 laserfence-base-damage=Damage
 laserfence-beam-weapon-scaling=Scale Damage with Beam Weapon Upgrades?
-laserfence-power=Power Consumption
+laserfence-power=Emitter Power Consumption
+laserfence-segment-power=Per Tile Power Consumption
 
 [mod-setting-description]
 laserfence-template=__1__\nDefault: __2__
@@ -46,4 +49,5 @@ laserfence-added-range=The amount of additional fence senctions granted by the L
 laserfence-health=Laser Fence HP.
 laserfence-base-damage=Amount of damage that biters take from attacking the Laser Fence.
 laserfence-beam-weapon-scaling=Whether to have Laser Fence damage scaled by upgrades that apply to beam weapons.
-laserfence-power=The number of kW required to power a single Laser Fence post. Only the posts require power, not the fence segments. For reference, an Assembler 2 takes 150kW.
+laserfence-power=The number of kW required to power a single Laser Fence post. For reference, a vanilla Assembler 2 takes 150kW.
+laserfence-segment-power=The number of kW required to power a single tile of Laser Fence. For reference, a vanilla Assembler 2 takes 150kW.
